--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                     the blind texts. Separated they live in.
                 </p>
                 <a href="#">See My Resume</a>
-                <div class="icons">
-                    <div class="twitterlogo"><i class="fa-brands fa-twitter"></i></div>
-                    <div class="fblogo"><i class="fa-brands fa-facebook-f"></i></div>
-                    <div class="instalogo"><i class="fa-brands fa-instagram"></i></div>
+                <div class="sm icons">
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                    <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
                 </div>
 
                 <h2 class="aboutcontact">Contact Me Here!</h2>
@@ -110,7 +110,6 @@
         </section>
 
         <!-- PORTFOLIO -->
-
         <section class="portfoliowrapper">
 
             <div class="portfolioheading">
@@ -119,53 +118,63 @@
             </div>
 
             <section class="project">
-                <div class="p1-img"><img src="#" alt=""></div>
+                <div class="p1-img"><img src="periodic table.png" alt=""></div>
                 <div class="p1-text">
-                    <h6>ILLUSTRATION</h6>
+                    <h6>PERIODIC TABLE</h6>
                     <h1>Even the all-powerful Pointing has no control</h1>
-                    <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-                    <a href="#">View Project</a>
+                    <p>The periodic table is a tabular array of the chemical elements organized by atomic number, from the element with the lowest atomic number, hydrogen, to the element with the highest atomic number, oganesson.</p>
+                    <a href=" https://muhammadali563.github.io/periodic-table/">View Project</a>
                 </div>
             </section>
 
             <section class="project">
                 <div class="p2-text">
-                    <h6>ILLUSTRATION</h6>
+                    <h6>SAYLANI FORM</h6>
                     <h1>Even the all-powerful Pointing has no control</h1>
-                    <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-                    <a href="#">View Project</a>
+                    <p>Saylani Welfare International Trust is a non-government organization focusing primarily on feeding the poor and homeless.</p>
+                    <a href="https://muhammadali563.github.io/saylani-form/">View Project</a>
                 </div>
-                <div class="p2-img"></div>
+                <div class="p2-img"><img src="saylani form.png" alt=""></div>
             </section>
 
             <section class="project">
-                <div class="p3-img"></div>
+                <div class="p3-img"><img src="apple.com.png" alt=""></div>
                 <div class="p3-text">
-                    <h6>ILLUSTRATION</h6>
+                    <h6>APPLE.COM</h6>
                     <h1>Even the all-powerful Pointing has no control</h1>
-                    <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-                    <a href="#">View Project</a>
+                    <p>Introducing the new MacBook Pro and Mac mini.</p>
+                    <a href=" https://muhammadali563.github.io/apple-website/" target="_blank">View Project</a>
                 </div>
             </section>
 
             <section class="project">
                 <div class="p4-text">
-                    <h6>ILLUSTRATION</h6>
+                    <h6>SAYLANI WEBSITE</h6>
                     <h1>Even the all-powerful Pointing has no control</h1>
-                    <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-                    <a href="#">View Project</a>
+                    <p>Saylani Welfare International Trust is a non-government organization focusing primarily on feeding the poor and homeless.</p>
+                    <a href="https://muhammadali563.github.io/saylani-website/">View Project</a>
                 </div>
-                <div class="p4-img"></div>
+                <div class="p4-img"><img src="saylani website.jpg" alt=""></div>
             </section>
 
             <section class="project">
-                <div class="p5-img"></div>
+                <div class="p5-img"><img src="class form.png" alt=""></div>
                 <div class="p5-text">
-                    <h6>ILLUSTRATION</h6>
+                    <h6>CLASS FORM</h6>
                     <h1>Even the all-powerful Pointing has no control</h1>
-                    <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-                    <a href="#">View Project</a>
+                    <p>This form is particularly design to take input for our current survey
+                        fill up this form so that we can end up all of our activities and provide a best solution for current affairs in society</p>
+                    <a href="https://muhammadali563.github.io/class-form/">View Project</a>
                 </div>
+            </section>
+
+            <section class="project">
+                <div class="p6-text">
+                    <h6>SIGNUP FORM</h6>
+                    <h1>Even the all-powerful Pointing has no control</h1>
+                    <p>My very first HTML, CSS, Javascript project in which i created a responsive, animated, sign up and sign in form.</p>
+                    <a href="https://muhammadali563.github.io/signup-form/">View Project</a></div>
+                    <div class="p6-img"><img src="signupform.png" alt=""></div>
             </section>
 
 
@@ -174,9 +183,22 @@
 
         </section>
 
+        <!-- CONTACT -->
+        <section class="contactwrapper">
 
+            <div class="sm">
+                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+            </div>
 
+            <div class="contactcontact">
+            <h1>Contacts Us</h1>
+            <h2>ahplay786@gmail.com</h2>
 
+        </div>
+            <div class="contacttext"><p>Copyright ©2023 All rights reserved | This Is Muhammad Ali Portfolio  </p></div>
+        </section>
 
     </section>
 
