--- a/index.html
+++ b/index.html
@@ -117,6 +117,33 @@
                 <h1 class="animate__animated animate__fadeInUp">Checkout a few of my works</h1>
             </div>
 
+            
+            <!-- OLX.com -->
+
+            <section class="project">
+                <div class="p1-img"><img src="OLX-logo.jpg" alt=""></div>
+                <div class="p1-text">
+                    <h6>PERIODIC TABLE</h6>
+                    <h1>Even the all-powerful Pointing has no control</h1>
+                    <p>The periodic table is a tabular array of the chemical elements organized by atomic number, from the element with the lowest atomic number, hydrogen, to the element with the highest atomic number, oganesson.</p>
+                    <a href="https://github.com/MuhammadAli563/olx.git">View Project</a>
+                </div>
+            </section>
+
+            <section class="project">
+                <div class="p2-text">
+                    <h6>UPWORK</h6>
+                    <h1>Even the all-powerful Pointing has no control</h1>
+                    <p>How work should work Forget the old rules. You can have the best people.
+                        Right now. Right here.</p>
+                    <a href=" https://muhammadali563.github.io/periodic-table/">View Project</a>
+                </div>
+                <div class="p2-img"><img src="Upwork.png" alt=""></div>
+            </section>
+
+
+            <!-- Periodic table -->
+
             <section class="project">
                 <div class="p1-img"><img src="periodic table.png" alt=""></div>
                 <div class="p1-text">
@@ -126,6 +153,8 @@
                     <a href=" https://muhammadali563.github.io/periodic-table/">View Project</a>
                 </div>
             </section>
+
+                <!-- Saylani Form -->
 
             <section class="project">
                 <div class="p2-text">
@@ -137,9 +166,11 @@
                 <div class="p2-img"><img src="saylani form.png" alt=""></div>
             </section>
 
+                <!-- Apple.com -->
+
             <section class="project">
-                <div class="p3-img"><img src="apple.com.png" alt=""></div>
-                <div class="p3-text">
+                <div class="p1-img"><img src="apple.com.png" alt=""></div>
+                <div class="p1-text">
                     <h6>APPLE.COM</h6>
                     <h1>Even the all-powerful Pointing has no control</h1>
                     <p>Introducing the new MacBook Pro and Mac mini.</p>
@@ -147,19 +178,23 @@
                 </div>
             </section>
 
+                <!-- Saylani Website -->
+
             <section class="project">
-                <div class="p4-text">
+                <div class="p2-text">
                     <h6>SAYLANI WEBSITE</h6>
                     <h1>Even the all-powerful Pointing has no control</h1>
                     <p>Saylani Welfare International Trust is a non-government organization focusing primarily on feeding the poor and homeless.</p>
                     <a href="https://muhammadali563.github.io/saylani-website/">View Project</a>
                 </div>
-                <div class="p4-img"><img src="saylani website.jpg" alt=""></div>
+                <div class="p2-img"><img src="saylani website.jpg" alt=""></div>
             </section>
 
+                <!-- Class Form -->
+
             <section class="project">
-                <div class="p5-img"><img src="class form.png" alt=""></div>
-                <div class="p5-text">
+                <div class="p1-img"><img src="class form.png" alt=""></div>
+                <div class="p1-text">
                     <h6>CLASS FORM</h6>
                     <h1>Even the all-powerful Pointing has no control</h1>
                     <p>This form is particularly design to take input for our current survey
@@ -168,18 +203,16 @@
                 </div>
             </section>
 
+            <!-- Signup Form -->
+
             <section class="project">
-                <div class="p6-text">
+                <div class="p2-text">
                     <h6>SIGNUP FORM</h6>
                     <h1>Even the all-powerful Pointing has no control</h1>
                     <p>My very first HTML, CSS, Javascript project in which i created a responsive, animated, sign up and sign in form.</p>
                     <a href="https://muhammadali563.github.io/signup-form/">View Project</a></div>
-                    <div class="p6-img"><img src="signupform.png" alt=""></div>
+                    <div class="p2-img"><img src="signupform.png" alt=""></div>
             </section>
-
-
-
-
 
         </section>
 
