--- a/index.html
+++ b/index.html
@@ -126,9 +126,11 @@
                     <h6>PERIODIC TABLE</h6>
                     <h1>Even the all-powerful Pointing has no control</h1>
                     <p>The periodic table is a tabular array of the chemical elements organized by atomic number, from the element with the lowest atomic number, hydrogen, to the element with the highest atomic number, oganesson.</p>
-                    <a href="https://github.com/MuhammadAli563/olx.git">View Project</a>
+                    <a href="https://muhammadali563.github.io/olx/">View Project</a>
                 </div>
             </section>
+
+            <!-- UPWORK -->
 
             <section class="project">
                 <div class="p2-text">
@@ -136,7 +138,7 @@
                     <h1>Even the all-powerful Pointing has no control</h1>
                     <p>How work should work Forget the old rules. You can have the best people.
                         Right now. Right here.</p>
-                    <a href=" https://muhammadali563.github.io/periodic-table/">View Project</a>
+                    <a href="https://muhammadali563.github.io/upwork/">View Project</a>
                 </div>
                 <div class="p2-img"><img src="Upwork.png" alt=""></div>
             </section>
