--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
             <section class="project">
                 <div class="p1-img"><img src="OLX-logo.jpg" alt=""></div>
                 <div class="p1-text">
-                    <h6>PERIODIC TABLE</h6>
-                    <h1>Even the all-powerful Pointing has no control</h1>
-                    <p>The periodic table is a tabular array of the chemical elements organized by atomic number, from the element with the lowest atomic number, hydrogen, to the element with the highest atomic number, oganesson.</p>
+                    <h6>OLX</h6>
+                    <h1>Buying/Selling Platform</h1>
+                    <p>OLX Group is a Dutch-domiciled online marketplace headquartered in Amsterdam. The OLX consumer brand originated as OnLine eXchange in 2006. OLX Group is owned by Prosus, the international assets division of Naspers</p>
                     <a href="https://muhammadali563.github.io/olx/">View Project</a>
                 </div>
             </section>
@@ -135,7 +135,7 @@
             <section class="project">
                 <div class="p2-text">
                     <h6>UPWORK</h6>
-                    <h1>Even the all-powerful Pointing has no control</h1>
+                    <h1>Freelancing For Everyone</h1>
                     <p>How work should work Forget the old rules. You can have the best people.
                         Right now. Right here.</p>
                     <a href="https://muhammadali563.github.io/upwork/">View Project</a>
@@ -150,7 +150,7 @@
                 <div class="p1-img"><img src="periodic table.png" alt=""></div>
                 <div class="p1-text">
                     <h6>PERIODIC TABLE</h6>
-                    <h1>Even the all-powerful Pointing has no control</h1>
+                    <h1>A Bsic Project</h1>
                     <p>The periodic table is a tabular array of the chemical elements organized by atomic number, from the element with the lowest atomic number, hydrogen, to the element with the highest atomic number, oganesson.</p>
                     <a href=" https://muhammadali563.github.io/periodic-table/">View Project</a>
                 </div>
@@ -161,7 +161,7 @@
             <section class="project">
                 <div class="p2-text">
                     <h6>SAYLANI FORM</h6>
-                    <h1>Even the all-powerful Pointing has no control</h1>
+                    <h1>Class Assignment</h1>
                     <p>Saylani Welfare International Trust is a non-government organization focusing primarily on feeding the poor and homeless.</p>
                     <a href="https://muhammadali563.github.io/saylani-form/">View Project</a>
                 </div>
@@ -174,7 +174,7 @@
                 <div class="p1-img"><img src="apple.com.png" alt=""></div>
                 <div class="p1-text">
                     <h6>APPLE.COM</h6>
-                    <h1>Even the all-powerful Pointing has no control</h1>
+                    <h1>Brands Don't Need Marketing</h1>
                     <p>Introducing the new MacBook Pro and Mac mini.</p>
                     <a href=" https://muhammadali563.github.io/apple-website/" target="_blank">View Project</a>
                 </div>
@@ -185,7 +185,7 @@
             <section class="project">
                 <div class="p2-text">
                     <h6>SAYLANI WEBSITE</h6>
-                    <h1>Even the all-powerful Pointing has no control</h1>
+                    <h1>A Charity Source To Provide Needy</h1>
                     <p>Saylani Welfare International Trust is a non-government organization focusing primarily on feeding the poor and homeless.</p>
                     <a href="https://muhammadali563.github.io/saylani-website/">View Project</a>
                 </div>
@@ -198,7 +198,7 @@
                 <div class="p1-img"><img src="class form.png" alt=""></div>
                 <div class="p1-text">
                     <h6>CLASS FORM</h6>
-                    <h1>Even the all-powerful Pointing has no control</h1>
+                    <h1>Class Assignment</h1>
                     <p>This form is particularly design to take input for our current survey
                         fill up this form so that we can end up all of our activities and provide a best solution for current affairs in society</p>
                     <a href="https://muhammadali563.github.io/class-form/">View Project</a>
@@ -210,7 +210,7 @@
             <section class="project">
                 <div class="p2-text">
                     <h6>SIGNUP FORM</h6>
-                    <h1>Even the all-powerful Pointing has no control</h1>
+                    <h1>Responsive SIgnup FOrm</h1>
                     <p>My very first HTML, CSS, Javascript project in which i created a responsive, animated, sign up and sign in form.</p>
                     <a href="https://muhammadali563.github.io/signup-form/">View Project</a></div>
                     <div class="p2-img"><img src="signupform.png" alt=""></div>
