--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,31 +15,66 @@
     <title>Portfolio</title>
 </head>
 
-<body>
+<body id="body">
     <section class="innerbody">
 
 
         <!-- NAVBAR -->
         <section class="navwrapper">
 
-            <div class="logo">
-                <img src="" alt="">
-            </div>
+            <nav class="navbar navbar-dark fixed-top">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="offcanvas offcanvas-start " tabindex="-1" id="offcanvasDarkNavbar"
+                        aria-labelledby="offcanvasDarkNavbarLabel">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">MENU</h5>
+                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                                aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                                <li class="nav-item">
+                                    <a class="nav-link " href="#about">About</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#services">Services</a>
+                                </li>
 
-            <div class="menu"></div>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#work">Work</a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#social">Social</a>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+
         </section>
 
         <!-- INTRO PAGE -->
         <section class="intro">
             <div class="introtext">
                 <h2 class="animate__animated animate__fadeInUp">HELLO! I'M</h2>
+            </div>
+            <div class="introtext">
                 <h1 class="animate__animated animate__fadeInUp">MUHAMMAD ALI</h1>
             </div>
+
+
 
         </section>
 
         <!-- ABOUT -->
-        <section class="aboutwrapper">
+        <section class="aboutwrapper" id="about">
             <div class="aboutimg animate__animated animate__fadeInUpBig animate__delay-1s"> <img
                     src="Snapchat-1434060646.jpg" alt=""></div>
             <div class="abouttxt">
@@ -70,7 +106,7 @@
         </section>
 
         <!-- Services -->
-        <section class="servicewrapper ">
+        <section class="servicewrapper" id="services">
 
             <div class="serviceheading">
                 <P class="animate__animated animate__fadeInUp">WHAT I DO</P>
@@ -110,14 +146,14 @@
         </section>
 
         <!-- PORTFOLIO -->
-        <section class="portfoliowrapper">
+        <section class="portfoliowrapper" id="work">
 
             <div class="portfolioheading">
                 <P class="animate__animated animate__fadeInUp">PORTFOLIO</P>
                 <h1 class="animate__animated animate__fadeInUp">Checkout a few of my works</h1>
             </div>
 
-            
+
             <!-- OLX.com -->
 
             <section class="project">
@@ -125,7 +161,9 @@
                 <div class="p1-text">
                     <h6>OLX</h6>
                     <h1>Buying/Selling Platform</h1>
-                    <p>OLX Group is a Dutch-domiciled online marketplace headquartered in Amsterdam. The OLX consumer brand originated as OnLine eXchange in 2006. OLX Group is owned by Prosus, the international assets division of Naspers</p>
+                    <p>OLX Group is a Dutch-domiciled online marketplace headquartered in Amsterdam. The OLX consumer
+                        brand originated as OnLine eXchange in 2006. OLX Group is owned by Prosus, the international
+                        assets division of Naspers</p>
                     <a href="https://muhammadali563.github.io/olx/">View Project</a>
                 </div>
             </section>
@@ -151,24 +189,27 @@
                 <div class="p1-text">
                     <h6>PERIODIC TABLE</h6>
                     <h1>A Bsic Project</h1>
-                    <p>The periodic table is a tabular array of the chemical elements organized by atomic number, from the element with the lowest atomic number, hydrogen, to the element with the highest atomic number, oganesson.</p>
+                    <p>The periodic table is a tabular array of the chemical elements organized by atomic number, from
+                        the element with the lowest atomic number, hydrogen, to the element with the highest atomic
+                        number, oganesson.</p>
                     <a href=" https://muhammadali563.github.io/periodic-table/">View Project</a>
                 </div>
             </section>
 
-                <!-- Saylani Form -->
+            <!-- Saylani Form -->
 
             <section class="project">
                 <div class="p2-text">
                     <h6>SAYLANI FORM</h6>
                     <h1>Class Assignment</h1>
-                    <p>Saylani Welfare International Trust is a non-government organization focusing primarily on feeding the poor and homeless.</p>
+                    <p>Saylani Welfare International Trust is a non-government organization focusing primarily on
+                        feeding the poor and homeless.</p>
                     <a href="https://muhammadali563.github.io/saylani-form/">View Project</a>
                 </div>
                 <div class="p2-img"><img src="saylani form.png" alt=""></div>
             </section>
 
-                <!-- Apple.com -->
+            <!-- Apple.com -->
 
             <section class="project">
                 <div class="p1-img"><img src="apple.com.png" alt=""></div>
@@ -180,27 +221,29 @@
                 </div>
             </section>
 
-                <!-- Saylani Website -->
+            <!-- Saylani Website -->
 
             <section class="project">
                 <div class="p2-text">
                     <h6>SAYLANI WEBSITE</h6>
                     <h1>A Charity Source To Provide Needy</h1>
-                    <p>Saylani Welfare International Trust is a non-government organization focusing primarily on feeding the poor and homeless.</p>
+                    <p>Saylani Welfare International Trust is a non-government organization focusing primarily on
+                        feeding the poor and homeless.</p>
                     <a href="https://muhammadali563.github.io/saylani-website/">View Project</a>
                 </div>
                 <div class="p2-img"><img src="saylani website.jpg" alt=""></div>
             </section>
 
-                <!-- Class Form -->
+            <!-- Class Form -->
 
             <section class="project">
                 <div class="p1-img"><img src="class form.png" alt=""></div>
                 <div class="p1-text">
                     <h6>CLASS FORM</h6>
-                    <h1>Class Assignment</h1>
+                    <h1>Class Assignmen</h1>
                     <p>This form is particularly design to take input for our current survey
-                        fill up this form so that we can end up all of our activities and provide a best solution for current affairs in society</p>
+                        fill up this form so that we can end up all of our activities and provide a best solution for
+                        current affairs in society</p>
                     <a href="https://muhammadali563.github.io/class-form/">View Project</a>
                 </div>
             </section>
@@ -210,16 +253,18 @@
             <section class="project">
                 <div class="p2-text">
                     <h6>SIGNUP FORM</h6>
-                    <h1>Responsive SIgnup FOrm</h1>
-                    <p>My very first HTML, CSS, Javascript project in which i created a responsive, animated, sign up and sign in form.</p>
-                    <a href="https://muhammadali563.github.io/signup-form/">View Project</a></div>
-                    <div class="p2-img"><img src="signupform.png" alt=""></div>
+                    <h1>Even the all-powerful Pointing has no control</h1>
+                    <p>My very first HTML, CSS, Javascript project in which i created a responsive, animated, sign up
+                        and sign in form.</p>
+                    <a href="https://muhammadali563.github.io/signup-form/">View Project</a>
+                </div>
+                <div class="p2-img"><img src="signupform.png" alt=""></div>
             </section>
 
         </section>
 
         <!-- CONTACT -->
-        <section class="contactwrapper">
+        <section class="contactwrapper" id="social">
 
             <div class="sm">
                 <a href=""><i class="fa-brands fa-twitter"></i></a>
@@ -228,16 +273,24 @@
             </div>
 
             <div class="contactcontact">
-            <h1>Contacts Us</h1>
-            <h2>ahplay786@gmail.com</h2>
+                <h1>Contacts Us</h1>
+                <h2>ahplay786@gmail.com</h2>
 
-        </div>
-            <div class="contacttext"><p>Copyright ©2023 All rights reserved | This Is Muhammad Ali Portfolio  </p></div>
+            </div>
+            <div class="contacttext">
+                <p>Copyright ©2023 All rights reserved | This Is Muhammad Ali Portfolio </p>
+            </div>
         </section>
 
     </section>
 
 
 </body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+    integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+    crossorigin="anonymous"></script>
 
 </html>
